crates/proef-cli/tests/snapshots/corpus__bind__ambiguous_step.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: stderr
---
proef::bind::ambiguous_step (https://emrecdr.github.io/proef/DIAGNOSTICS.html)

  × `I do the thing` matches 2 macros: `one` (I do the thing), `two` (I do the thing)
   ╭─[tests/errors/bind__ambiguous_step/case.feature:3:5]
 2 │   Scenario: S
 3 │     When I do the thing
   ·     ───────────────────
   ╰────

1 error(s)
