crates/proef-cli/tests/snapshots/corpus__bind__missing_param.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: stderr
---
proef::bind::missing_param (https://emrecdr.github.io/proef/DIAGNOSTICS.html)

  × macro `create` needs `firstName` — add a `{firstName}` capture, a data-table row, or a default
   ╭─[tests/errors/bind__missing_param/case.feature:3:5]
 2 │   Scenario: S
 3 │     When I create a record
   ·     ──────────────────────
   ╰────

1 error(s)
