crates/proef-cli/tests/snapshots/corpus__bind__unbound_step.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: stderr
---
proef::bind::unbound_step

  × no macro matches `I serch for Jansen` — did you mean `I search for {term}`?
   ╭─[tests/errors/bind__unbound_step/case.feature:3:5]
 2 │   Scenario: S
 3 │     When I serch for Jansen
   ·     ───────────────────────
   ╰────
  help: match a sentence the suite's packs already bind, or add a macro to a pack:
        
        macros:
          newMacro:
            match: I serch for Jansen
            steps:
              - hurl: |
                  GET ${url:base}/PATH
                  HTTP 200

1 error(s)
